# CppMembot

./: .clang-format  CMakeLists.txt  vcpkg.json
.github/workflows/: checks.yml
src/: chatbot.cpp  chatbot.h  chatgui.cpp  chatgui.h  chatlogic.cpp  chatlogic.h  graphedge.h  graphnode.cpp  graphnode.h
